terraform/aws/sg_ec2.tf
resource "aws_security_group" "dev"
{
  tags
  {
    Name = "${var.pname}-ec2-dev"
  }
  name = "${var.pname}-ec2-dev"
  description = "Created by Shailender Choudhary"

  ingress{
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.cidr}"]

  }
  ingress{
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress{
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
 ingress{
    from_port = 9100
    to_port = 9100
    protocol = "tcp"
    cidr_blocks = ["54.153.41.181/32"]

  }
  egress{
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


}
